--- a/src/components/sidebar/Sidebar.module.scss
+++ b/src/components/sidebar/Sidebar.module.scss
@@ -111,6 +111,8 @@ html[dir="rtl"] {
         padding-left: 0;
         // padding-right: 16px;
         // font-weight: 500;
+        cursor: pointer;
+
         font-size: 18px;
         // margin-bottom: 1.5rem;
         &.active {
