--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -24,8 +24,8 @@ $pagination-bg-color: #f0f0f0;
 
 table {
   width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
+  // border-collapse: collapse;
+  // margin-bottom: 20px;
 
   th, td {
     padding: 10px;
