--- a/src/components/UI/card/Card.module.scss
+++ b/src/components/UI/card/Card.module.scss
@@ -1,14 +1,14 @@
 @use "../../../scss/abstracts/" as *;
 
 .card {
-  @include flex(stretch, flex-start);
+  // @include flex(stretch, flex-start);
   background-color: var(--bgc);
   border-radius: $mediumBorderRadius;
   box-shadow: $mainBoxShadow;
   padding: 1rem 2rem;
   flex: 1;
   overflow: auto;
-  max-width: 2000px;
+  // max-width: 2000px;
 
   &::-webkit-scrollbar {
     height: 0.8rem;
